--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "source-map-resolve": "^0.6.0",
+    "svgo": "^2.8.0",
     "typescript": "^4.5.5",
     "uid": "^2.0.0",
     "web-vitals": "^2.1.4"
