--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://xk2102.github.io/rhoam-tasks",
   "name": "rhoam-tasks",
   "version": "0.1.0",
   "private": true,
@@ -15,12 +16,13 @@
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "source-map-resolve": "^0.6.0",
-    "svgo": "^2.8.0",
     "typescript": "^4.5.5",
     "uid": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
